Update Charity Water website layout and content

--- a/index.html
+++ b/index.html
@@ -7,41 +7,40 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
-    <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
-    </section>
+    <!-- Logo Title at the Top -->
+    <div style="text-align: center; margin-top: 30px;">
+        <img src="img/cw_logo-2.png" alt="Charity Water Logo" width="200">
+    </div>
 
-    <!-- Story Section: This tells the story of the nonprofit -->
-    <section class="story">
-        <h2>Our Story</h2>
-        <p>
-         
-    </section>
+    <!-- Images under Charity Water headline -->
+    <div style="text-align: center; margin-top: 20px; display: flex; justify-content: center; align-items: center; gap: 20px;">
+        <img src="img/4891_Ethiopia_2019_CG-.png" alt="Ethiopia 2019" style="border-radius: 10px; width: 350px; height: auto; object-fit: contain;">
+        <span style="font-family: Avenir, Georgia, serif; font-size: 2em; color: #003366; text-align: center; font-weight: bold; display: flex; flex-direction: column; align-items: center;">
+            Water<br>Changes<br>Everything
+        </span>
+        <img src="img/4800_Ethiopia_2019_CG-.png" alt="Ethiopia 2019" style="border-radius: 10px; width: 350px; height: auto; object-fit: contain;">
+    </div>
+
+
 
     <!-- Real-World Impact Story Section -->
     <section class="impact-story">
         <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
+    <h2 style="text-align: center; color: #003366; font-family: Avenir, Georgia, serif; font-weight: bold;">Our Mission</h2>
         <!-- Container for image and text -->
         <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
             <!-- Impact story text -->
-            <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
+            <p style="text-align: center;">
+                At charity: water, we take pride in providing clean, drinkable water in areas where it is lacking. We strive to provide a charity with an open, honest message that people can feel confident supporting. Together, we can end the water crisis in our lifetime. Bringing clean, safe drinking water to every person on the planet.
             </p>
         </div>
     </section>
 
     <!-- Call-to-Action Section: This encourages visitors to take action -->
     <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
+    <h2 style="color: #FFF7E1;">Make a Difference</h2>
+    <p style="color: #FFF7E1;">Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
+    <a href="#" class="donate-button" style="background-color: #003366; color: #FFF7E1; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold; font-size: 1.1em;">Donate Now</a>
     </section>
 </body>
 </html>
