--- a/index.html
+++ b/index.html
@@ -43,4 +43,5 @@
     <a href="#" class="donate-button" style="background-color: #003366; color: #FFF7E1; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold; font-size: 1.1em;">Donate Now</a>
     </section>
 </body>
-</html>
+
+git add <div class=""></div>
